# greentic-flow

./: CHANGELOG.md  Cargo.toml  MIGRATION_STATUS.md  README.md  card.example.json  card.schema.json  repo_overview.md
.codex/: A-PR-01.md  A-PR-02.md  A-PR-03.md  A-PR-04.md  PR-00-VISION.md  PR-05.md  PR-06.md  PR-07.md  PR-08.md  PR-FLOW-01-wizard-provider-flow-scaffold.md  PR-FLOW-02-wizard-updates  repo_overview.md
.i18n/: translator-state.json
ci/: check_interfaces_alignment.sh  check_no_component_wizard_usage.sh  check_no_duplicate_canonical_wit.sh  check_no_greentic_interfaces_bindings_usage.sh  dev-cargo-config.toml  local_check.sh
docs/: README.md  add_step_audit.md  add_step_design.md  cli.md  codex-security-fix-test.md  deployment-flows.md  strict_validation.md
examples/: smoke.ygtc
fixtures/: flow_ok.bundle.json  flow_ok.ygtc  invalid_node_shape.ygtc  weather_bot.ygtc  weather_bot.ygtc.resolve.json
i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
schemas/: ygtc.flow.schema.json
scripts/: replace_org_name.ps1
src/: add_step.rs  answers.rs  bundle.rs  component_catalog.rs  component_schema.rs  component_setup.rs  config_flow.rs  contracts.rs  error.rs  flow_bundle.rs  flow_ir.rs  flow_meta.rs  i18n.rs  ir.rs  json_output.rs  lib.rs  loader.rs  model.rs  path_safety.rs  qa_runner.rs  questions.rs  questions_schema.rs  registry.rs  resolve.rs  resolve_summary.rs  schema_mode.rs  schema_validate.rs  splice.rs  template.rs  util.rs  wizard_ops.rs  wizard_state.rs
tests/: .wizard_scaffold.rs.pending-snap  adapter_resolvable_cli.rs  adapter_resolvable_fail.rs  adapter_resolvable_ok.rs  add_step_advanced.rs  add_step_config_runner.rs  add_step_enterprise.rs  add_step_golden.rs  add_step_integration.rs  answers.rs  answers_cli_ops.rs  bundle_contract.rs  bundle_golden.rs  component_catalog.rs  (+16 more)
(+123 files in other folders)
