[package]
name = "greentic-flow"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generic YGTC flow schema/loader/IR for self-describing component nodes."
repository = "https://github.com/greentic-ai/greentic-flow"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = { version = "0.17", features = ["draft202012"] }
thiserror = "1"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
lazy_static = "1"

[dev-dependencies]
pretty_assertions = "1"
insta = "1"
